test/scc/lex/errors/009.a
009.t:1:1: error: invalid floating literal '123.2asdf'